# survey_antispoof

./: .gitignore  README.md  writing_introduce.md
.claude/: settings.json  settings.local.json
.pipeline/: .session-context.md
.pipeline/docs/: experiment_plan.md  gap_matrix.md  idea_board.json  research_brief.json  voice_diffattack_experiment_design.md
.pipeline/docs/papers/: Abbasihafshejani 等 - VocalBridge 2026.md  Bai 等 - DAP 2024.md  Bai 等 - MDD 2025.md  Bai 等 - Two-Stage Diffusion 2024.md  Chen 等 - Textual-Driven Purification 2024.md  Chen 等 - Towards Understanding Audio Adversarial Examples for Speaker Recognition 2022.md  Fan 等 - De-AntiFake.md  Guo 等 - WavePurifier 2024.md  Hussain 等 - WaveGuard.md  INDEX.md  Kang 等 - DiffAttack 2024.md  Kassis 等 - DiffBreak 2025.md  Kong 等 - DiffWave 2021.md  Li 等 - TTS Adversarial 2025.md  Li 等 - Voice Guard 2023.md  Park 等 - Super-Resolution Diffusion.md  Tan 等 - DualPure 2024.md  Wang 等 - ClearMask 2025.md  Wang 等 - DiffHammer.md  Wang 等 - FraudWhistler.md  Wu 等 - AudioPure 2023.md  Zhang 等 - SafeSpeech 2025.md  (+1 more)
.pipeline/memory/: agent_handoff.md  decision_log.md  execution_context.md  experiment_ledger.md  literature_bank.md  orchestrator_state.md  project_truth.md  review_log.md
experiments/dual_target_attack/: README.md  __init__.py  analyze_repeated_purification.py  cal_cmu_threshold.py  calibrate_thresholds.py  config.py  full.sh  main.py  prepare_test800.py  pyproject.toml  requirements.txt  run_diffattack.sh  run_exp.sh  run_repeated_purification_study.sh
experiments/dual_target_attack/attacks/: __init__.py  diffattack_pgd.py  dual_pgd.py  fulltrace_pgd.py  utils.py
experiments/dual_target_attack/data/: dataset.py
experiments/dual_target_attack/evaluation/: metrics.py
experiments/dual_target_attack/models/: purification.py  speaker_model.py
experiments/dual_target_attack/models/ecapa_tdnn_pretrained/: hyperparams.yaml
experiments/dual_target_attack/models/xvector_tdnn_pretrained/: .gitattributes
paper_acsac/: custom.bib  main.tex
paper_acsac/sections/: abstract.tex  conclusion.tex  experiments.tex  introduction.tex  methodology.tex  related_work.tex
scripts/: baseline_sim_eval.py  eval_protected_speaker_similarity.py  eval_purguard_speaker_similarity.py  eval_speaker_similarity.py  xiaomi_tts_clone_reference_text.py
(+111 files in other folders)
