[project]
name = "dual-target-attack"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pystoi>=0.3.3",
    "speechbrain>=0.5.15",
    "resemblyzer>=0.1.4",
    "phonemizer>=3.3.0",
    "cython>=3.2.4",
    "transformers>=4.57.6",
    "onnx>=1.16.0",
    "onnx2torch>=1.5.15",
]

[project.optional-dependencies]
eval = [
    "pesq>=0.0.4",
]
research = [
    "diffusers>=0.21.0",
    "transformers>=4.57,<5",
    "accelerate>=0.20.0",
    "torchsde>=0.2.6",
    "coqui-tts[codec]>=0.27.2",
    "webrtcvad>=2.0.10",
]

[dependency-groups]
dev = [
    "tensorboard>=2.13.0",
    "seaborn>=0.12.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
